--- a/biblio.bib
+++ b/biblio.bib
@@ -530,3 +530,13 @@ month={July},}
   year={1947},
   publisher={JSTOR}
 }
+
+@article{trunk1979problem,
+  title={A problem of dimensionality: A simple example},
+  author={Trunk, Gerard V},
+  journal={IEEE Transactions on pattern analysis and machine intelligence},
+  number={3},
+  pages={306--307},
+  year={1979},
+  publisher={IEEE}
+}
