--- a/paper.tex
+++ b/paper.tex
@@ -1,5 +1,5 @@
-\documentclass[journal,peerreview,onecolumn]{IEEEtran}
-% \documentclass[journal]{IEEEtran}
+% \documentclass[journal,peerreview,onecolumn]{IEEEtran}
+\documentclass[journal,10pt]{IEEEtran}
 \usepackage{etex}
 \usepackage{cite}
 \usepackage[pdftex]{graphicx}
@@ -30,8 +30,8 @@
 }
 
 % for peerreview
-\usepackage{setspace}
-\onehalfspacing
+% \usepackage{setspace}
+% \onehalfspacing
 
 \newtheorem{prop}{Proposition}
 
@@ -125,7 +125,7 @@ difficult~\cite{donoho}.  Consequently,  with a limited  training set,
 beyond a certain limit, the classification accuracy actually decreases
 as the number of features increases~\cite{hughes}.  For the purpose of
 classification,  these  problems are  related  to  the \emph{curse  of
-  dimensionality}. This  is a  major drawback  in many  remote sensing
+  dimensionality}~\cite{trunk1979problem}. This  is a  major drawback  in many  remote sensing
 application since it  is difficult to collect a large  and an accurate
 ground-truth.   An intensive  work has  been performed  in the  remote
 sensing community  to build accurate classifiers  for high dimensional
