--- a/response.tex
+++ b/response.tex
@@ -224,7 +224,7 @@ In Algorithm 3, a threshold EPS\_FLT on eigenvalues is used to prevent numerical
 \begin{revbox}
   A reference or an explanation should be made in Page 1, line 36 regarding the curse of dimensionality
   \begin{resbox}
-
+    We had a reference as suggested.
   \end{resbox}
 \end{revbox}
 
